deployCode/objects/Tour_Packages__c.object
<CustomObject>
    <description>Tells about the package details</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_per_day__c</fullName>
        <label>Cost_per_day</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offer</label>
        <referenceTo>Offer__c</referenceTo>
        <relationshipLabel>Tour Packages</relationshipLabel>
        <relationshipName>Tour_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Place__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Place</label>
        <referenceTo>Places__c</referenceTo>
        <relationshipLabel>Tour Packages</relationshipLabel>
        <relationshipName>Tour_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tour_Package_Detail__c</fullName>
        <label>Tour Package Detail</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>country__c</fullName>
        <label>country</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Tour Package</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>View_packages</fullName>
        <columns>NAME</columns>
        <columns>Place__c</columns>
        <columns>Tour_Package_Detail__c</columns>
        <columns>Active__c</columns>
        <columns>Cost_per_day__c</columns>
        <columns>country__c</columns>
        <filterScope>Mine</filterScope>
        <label>View _packages</label>
    </listViews>
    <nameField>
        <label>Tour Packages Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tour Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>